# RemoteDictionary

./: CMakeLists.txt  README.md
src/c/: client.c  client_engine.c  server.c  server_engine.c  storage.c
src/include/: client.h  client_engine.h  error_codes.h  macro.h  server.h  server_engine.h  storage.h  tags.h
utest/: CMakeLists.txt
utest/c/: utest_client.c  utest_libuv_echo_client.c  utest_libuv_echo_server.c  utest_storage.c
